<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a0ba4a"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/changed_info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/item_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/product_info"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:background="#ffffff"
                android:shadowColor="@android:color/darker_gray"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/shopView"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="0"
                android:background="#ffffff"
                android:contentDescription="@string/shopView"
                android:src="@drawable/logo_5ka" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:background="#ffffff"
                android:shadowColor="@android:color/darker_gray"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/changed_info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/item_search2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/product_info2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:background="#ffffff"
                android:shadowColor="@android:color/darker_gray"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/shopView2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="0"
                android:background="#ffffff"
                android:contentDescription="@string/shopView2"
                android:src="@drawable/lenta" />

            <TextView
                android:id="@+id/product_price2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:background="#ffffff"
                android:shadowColor="@android:color/darker_gray"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/changed_info3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/item_search3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/product_info3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:background="#ffffff"
                android:shadowColor="@android:color/darker_gray"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/shopView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="0"
                android:background="#ffffff"
                android:contentDescription="@string/shopView3"
                android:src="@drawable/stock_8_z066" />

            <TextView
                android:id="@+id/product_price3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:background="#ffffff"
                android:shadowColor="@android:color/darker_gray"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/main_product_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:background="#f2faf4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/text_view_item_price"
            android:background="#ffffff"
            android:contentDescription="@string/shopView"
            android:src="@drawable/logo_5ka" />

        <ImageView
            android:id="@+id/imgView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignStart="@+id/imgView"
            android:layout_alignTop="@+id/text_view_item_price2"
            android:background="#ffffff"
            android:contentDescription="@string/shopView2"
            android:src="@drawable/lenta" />

        <ImageView
            android:id="@+id/imgView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignStart="@+id/imgView"
            android:layout_below="@+id/text_view_item_price2"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:contentDescription="@string/shopView3"
            android:src="@drawable/stock_8_z066" />

        <TextView
            android:id="@+id/barcode_result2"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/imageView"
            android:background="@android:color/white"
            android:shadowColor="@android:color/darker_gray"
            android:shadowRadius="4"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:contentDescription="@string/imageView"
            android:src="@drawable/bumplat_peryshko" />

        <TextView
            android:id="@+id/text_view_item_price"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:ems="10" />

        <TextView
            android:id="@+id/text_view_item_price2"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="34dp" />

        <TextView
            android:id="@+id/text_view_item_price3"
            android:layout_width="55dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_view_item_price2"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp" />

        <TextView
            android:id="@+id/text_view_item_name"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_centerVertical="false"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/imgView" />

        <TextView
            android:id="@+id/text_view_item_name2"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_below="@+id/text_view_item_price"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/imgView" />

        <TextView
            android:id="@+id/text_view_item_name3"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_below="@+id/text_view_item_price2"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/imgView" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/list_dynamic"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:text="@string/button2"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="2dp"
            android:background="#ffd770"
            android:freezesText="false"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/checkBox2"
            android:textColor="#000000" />

        <Button
            android:id="@+id/search_by_code"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:background="@android:drawable/ic_search_category_default"
            android:freezesText="false"
            android:onClick="scanBarcode"
            android:shadowColor="@android:color/darker_gray"
            android:shadowRadius="4"
            android:text="@string/search_by_code"
            android:textColor="#ffffff"
            android:textStyle="italic" />


    </RelativeLayout>


</LinearLayout>